# MCP2210-Library

./: CMakeLists.txt  README.md  toolchain.cmake
hid/: CMakeLists.txt
hid/include/: hidapi.h
mcp2210/: CMakeLists.txt
mcp2210/include/: mcp2210.h
mcp2210/src/: mcp2210.cpp  mcp2210.h
mcp2210/test/: mcp2210test.cpp
